# hello-sdl

./: CMakeLists.txt  README.md  main.c
