cmake_minimum_required(VERSION 3.16)
project(HelloSDL)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIGURATION>")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIGURATION>")

add_subdirectory(SDL EXCLUDE_FROM_ALL)

add_executable(${PROJECT_NAME} WIN32 main.c)

target_link_libraries(${PROJECT_NAME} PRIVATE SDL3::SDL3)
